--- a/contact.html
+++ b/contact.html
@@ -62,91 +62,14 @@
 
     <main id="main">
 
-<div data-tf-widget="Nk0uilHJ" data-tf-opacity="100" data-tf-hide-headers data-tf-iframe-props="title=AI Chatbot Business Lead Form" data-tf-transitive-search-params data-tf-medium="snippet" style="width:50% ;height: 600px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+        
 
-        <div class="breadcrumbs d-flex align-items-center"
-            style="background-image: url('assets/img/hero-carousel/hero-carousel-5.jpg');">
-            <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
+        <h2> In createai.ai we are more than happy to have and coffee and discuss your needs</h2>
 
-                <h2>Contact</h2>
-                <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Contact</li>
-                </ol>
 
-            </div>
-        </div>
-        <section id="contact" class="contact">
-            <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-                <div class="row gy-4">
-                    <div class="col-lg-6">
-                        <div class="info-item  d-flex flex-column justify-content-center align-items-center">
-                            <i class="bi bi-map"></i>
-                            <h3>Our Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
-                        </div>
-                    </div>
+        <div data-tf-widget="Nk0uilHJ" data-tf-opacity="100" data-tf-hide-headers data-tf-iframe-props="title=AI Chatbot Business Lead Form" data-tf-transitive-search-params data-tf-medium="snippet" style="width:50% ;height: 600px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 
-                    <div class="col-lg-3 col-md-6">
-                        <div class="info-item d-flex flex-column justify-content-center align-items-center">
-                            <i class="bi bi-envelope"></i>
-                            <h3>Email Us</h3>
-                            <p>contact@example.com</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="info-item  d-flex flex-column justify-content-center align-items-center">
-                            <i class="bi bi-telephone"></i>
-                            <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row gy-4 mt-1">
-
-                    <div class="col-lg-6 ">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d257456.55087884527!2d121.574421667765!3d25.056486219697977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ac72bce20a99%3A0x3f6a35cedd0ac2e0!2sTaipei!5e0!3m2!1sen!2stw!4v1691061224036!5m2!1sen!2stw"
-                            frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                            <div class="row gy-4">
-                                <div class="col-lg-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name"
-                                        placeholder="Your Name" required>
-                                </div>
-                                <div class="col-lg-6 form-group">
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Your Email" required>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject"
-                                    placeholder="Subject" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" placeholder="Message"
-                                    required></textarea>
-                            </div>
-                            <div class="my-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
-                            </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
-                        </form>
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
 
     </main>
 
