--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,9 @@
 
     </main>
 
+
+    
+
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
 
@@ -82,7 +85,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-info">
-                            <h3>Optimize.Ai</h3>
+                            <h3>Createai.ai</h3>
                             <p>
                                 Renai Rd 189<br>
                                 Taipei-Taiwan<br><br>
