--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
     </div>
 
-      <div class="text-center">
+      <div class="pt-2 text-center pb-5 mb-5">
         <div data-tf-widget="Nk0uilHJ" data-tf-opacity="100" data-tf-hide-headers data-tf-iframe-props="title=AI Chatbot Business Lead Form" data-tf-transitive-search-params data-tf-medium="snippet" style="width:50% ;height: 600px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 
     </div>
