--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,11 @@
 
         <h2 class="text-strong text-black" style="font-size: 50px;"> Contact us</h2>
 
-        <h3 class="pt-2 text-normal"> In createai we are more than happy to have a coffee and discuss your needs.</h3>
+        <h3 class="pt-2 text-center pb-5 mb-5"> In createai we are more than happy to have a coffee and discuss your needs.</h3>
 
     </div>
 
-      <div class="text-center">
+      <div class="pt-2 text-center pb-5 mb-5">
     <div class="mx-auto" data-tf-widget="Nk0uilHJ" data-tf-opacity="100" data-tf-hide-headers data-tf-iframe-props="title=AI Chatbot Business Lead Form" data-tf-transitive-search-params data-tf-medium="snippet" style="width:50%; height: 600px;"></div>
     <script src="//embed.typeform.com/next/embed.js"></script>
 </div>
