--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     
 
     <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
+    <footer id="footer" class="footer pt-5 mt-5">
 
         <div class="footer-content position-relative">
             <div class="container">
