--- a/about.html
+++ b/about.html
@@ -28,30 +28,28 @@
 
 <body>
 
-    <header id="header" class="header d-flex align-items-center">
+    < <header id="header" class="header d-flex align-items-center">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
             <a href="index.html" class="logo d-flex align-items-center">
 
-                <h1>createai<span>.</span></h1>
+                <h1>CreateAi<span>.</span>ai</h1>
             </a>
 
             <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="projects.html">Chatbot</a></li>
+                    <li><a href="index.html" class="active">Ai projects</a></li>
                     <li><a href="about.html">About</a></li>
-
-                    <li><a href="projects.html">Projects</a></li>
-
-
-                    <li><a href="contact.html">Let's have a coffee</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
                 </ul>
-            </nav><!-- .navbar -->
+            </nav>
 
         </div>
-    </header><!-- End Header -->
+    </header>
+
 
     <main id="main">
 
