--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,11 @@
 
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <title>CreateAI- Contact us/title>
 
     <!-- Favicons -->
+    
+
   
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
