--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <title>CreateAI- Project Details</title>
 
     <!-- Favicons -->
     
