--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     
         <meta content="" name="description">
         <meta content="" name="keywords">
+        <title>CreateAI - Our Projects </title>
     
         <!-- Favicons -->
         <link href="assets/img/favicon.png" rel="icon">
