--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
   <title>UpConstruction Bootstrap Template - Services</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <title>CreateAI - Services</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
