--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <title>CreateAI- Contact us/title>
+    <title>CreateAI - Contact us </title>
 
     <!-- Favicons -->
     
