--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" class="active">Ai projects</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html" >Ai projects</a></li>
+                    <li><a href="about.html"class="active">About</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
