--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" class="active">Ai projects</a></li>
+                    <li><a href="index.html" class="active">Why Ai</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
