--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
 
     <!-- Favicons -->
-   <title>createAi - About us</title>
+   <title>CreateAi - About us</title>
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -23,6 +23,8 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
+
+    
 
 </head>
 
