--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,8 @@
             <i class="mobile-nav-toggle mobile-nav-hide bi bi-x d-none"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" class="active">Why Ai</a></li>
+                    <li><a href="projects.html" class="active">Chatbot</a></li>
+                    <li><a href="index.html">Why Ai</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
