--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" >Ai projects</a></li>
+                    <li><a href="index.html" >Why Ai</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" class="active">Contact us</a></li>
                 </ul>
