--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
 
     <!-- Favicons -->
-   <title>CreateAi - About us</title>
+   <title>CreatefyAi - About us</title>
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
