git commit-various changes

--- a/about.html
+++ b/about.html
@@ -30,21 +30,21 @@
 
 <body>
 
-    < <header id="header" class="header d-flex align-items-center">
+     <header id="header" class="header d-flex align-items-center">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
             <a href="index.html" class="logo d-flex align-items-center">
 
-                <h1>CreateAi<span>.</span>ai</h1>
+                <h1>CreatefyAi<span>.</span></h1>
             </a>
 
             <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" >Why Ai</a></li>
-                    <li><a href="about.html"class="active">About</a></li>
+                    <li><a href="index.html" >Custom Chatbot</a></li>
+                    <li><a href="projects.html">Why Ai</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
