--- a/services.html
+++ b/services.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>UpConstruction Bootstrap Template - Services</title>
+  
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <title>CreateAI - Services</title>
+  <title>CreatefyAi - Services</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -25,7 +24,7 @@
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+ 
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
