--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <title> CreateAi.ai</title>
+    <title> CreatefyAi.com</title>
 
     <!-- Favicons -->
 
@@ -40,15 +40,15 @@
 
             <a href="index.html" class="logo d-flex align-items-center">
 
-                <h1>CreateAi<span>.</span>ai</h1>
+                <h1>CreatefyAi<span>.</span></h1>
             </a>
 
             <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="projects.html">Chatbot</a></li>
-                    <li><a href="index.html" >Why Ai</a></li>
+                    <li><a href="index.html" >Custom Chatbot</a></li>
+                    <li><a href="projects.html">Why Ai</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" class="active">Contact us</a></li>
                 </ul>
@@ -63,15 +63,11 @@
  <body class="pt-5 mt-5">
 
         
-<<<<<<< Updated upstream
-      <div class="mt-5 pt-5 text-center">
-=======
       <div class="mt-5 pt-3 text-center">
->>>>>>> Stashed changes
 
         <h2 class="text-strong text-black" style="font-size: 50px;"> Contact us</h2>
 
-        <h3 class="pt-2 text-center pb-5 mb-5"> In createai we are more than happy to have a coffee and discuss your needs.</h3>
+        <h3 class="pt-2 text-center pb-5 mb-5"> In CreatefyAi we are more than happy to have a coffee and discuss your needs.</h3>
 
     </div>
 
@@ -97,7 +93,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-info">
-                            <h3>Createai.ai</h3>
+                            <h3>CreatefyAi.com</h3>
                             <p>
                                 Renai Rd 189<br>
                                 Taipei-Taiwan<br><br>
@@ -156,7 +152,7 @@
         <div class="footer-legal text-center position-relative">
             <div class="container">
                 <div class="copyright">
-                    &copy; Copyright 2023 <strong><span>Createai.ai</span></strong>. All Rights Reserved
+                    &copy; Copyright 2023 <strong><span>CreatefyAi.com</span></strong>. All Rights Reserved
                 </div>
 
             </div>
