--- a/project-details.html
+++ b/project-details.html
@@ -40,7 +40,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
  
-        <h1>UpConstruction<span>.</span></h1>
+        <h1>CreatefyAi<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
