--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="index.html" >Custom Chatbot</a></li>
-                    <li><a href="projects.html">Why Ai</a></li>
+                    <li><a href="index.html" >Chatbot</a></li>
+                    <li><a href="Why-Artificial-Inteligence.html">Why Ai</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" class="active">Contact us</a></li>
                 </ul>
