--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <title>CreatefyAi - Why Ai </title>
     
         <!-- Favicons -->
-        <link rel="icon" href="assets/img/createfylogo.png">
-        <link href="assets/img/favicon.png" rel="icon">
+        <link rel="icon" href="assets/img/createfylogo.png" rel="icon">
         <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     
         <!-- Google Fonts -->
@@ -71,8 +70,8 @@
                         <h2 style="font-size:50px"class="text-black pb-4" > Customized Chatbots :D </h2>
                         <p class="lead">
 
-                          Customized chatbots to tailor your specific needs. We analyze images, tables, text and make sure your users get the right answer to the questions. Dont get a generic chatbot that will hallucinate with your data. 
-                        </p>
+                        Images, tables, and text to deliver spot-on answers. Build your knowledgebase at scale. 
+                            Don't gamble with generic bots, we provide clarity and accuracy.    </p>
                     </div>
                     <div class="col-md-6 ">
                         <img src="assets/img/gyphy chatbot answers and questions.gif" class="d-block mx-lg-auto img-fluid" width="700" height="500" loading="lazy">
