--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 
                 <div class="row">
                     <div class="text-left col-md-6 mt-2 pt-2">
-                        <h2 style="font-size:50px"class="text-black pb-4" > Customized Chatbots :D </h2>
+                        <h2 style="font-size:50px"class="text-black pb-4" > Customized Chatbots </h2>
                         <p class="lead">
 
                         Images, tables, and text to deliver spot-on answers. Build your knowledgebase at scale. 
