--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <!-- Favicons -->
    <title>CreatefyAi - About us</title>
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+        <link rel="icon" href="assets/img/createfylogo.png" rel="icon">
+       
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
