--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
     <meta content="" name="keywords">
     <title> CreatefyAi.com</title>
 
-    <!-- Favicons -->
+    
+        <link rel="icon" href="assets/img/createfylogo.png" rel="icon">
+        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 
     <!-- Google Fonts -->
