--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                                         <h2 class="display-5 fw-bold lh-1 mb-3">Chatbot for support </h2>
                                         <p class="lead">Streamline assistance, reduce wait times, and offer tailored self-service support. From health care to logistics, unlock the power of our intelligent chatbot designed to address all your needs. The chatbot can include Knowledge base, FAQ, images and PDFs scrapping.</p>
                                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                                            <a href="https://createfyai.com/contact.html"> 
                                           <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contact Us</button>
-                                          
+                                          </a>
                                         </div>
                                       </div>
                                     </div>
